# mapeditor-ng

./: .gitignore  Cargo.toml  README.md
crates/wz-pie/: Cargo.toml
crates/wz-pie/src/: constants.rs  lib.rs  parser.rs  types.rs
crates/wz-stats/: Cargo.toml
crates/wz-stats/src/: bodies.rs  database.rs  features.rs  lib.rs  loaders.rs  propulsion.rs  structures.rs  templates.rs  terrain_table.rs  turrets.rs  weapons.rs
crates/wzmapeditor/: Cargo.toml
crates/wzmapeditor/.cargo/: config.toml
crates/wzmapeditor/assets/tilesets/: arizona.json  rockies.json  urban.json
crates/wzmapeditor/src/: autosave.rs  config.rs  icon.rs  keybindings.rs  logger.rs  main.rs  viewshed.rs
crates/wzmapeditor/src/app/: data_loading.rs  designer.rs  dialogs.rs  dock_viewer.rs  duplicate.rs  map_io.rs  mod.rs  output_log.rs  testing.rs  tests.rs  tileset.rs  types.rs
crates/wzmapeditor/src/balance/: analysis.rs  mod.rs  state.rs
crates/wzmapeditor/src/designer/: custom_templates.rs  mod.rs  state.rs  tabs.rs  ui.rs  validation.rs
crates/wzmapeditor/src/generator/: dialog.rs  heightmap.rs  mod.rs  nodes.rs  pipeline.rs  placement.rs  terrain.rs  texturing.rs
crates/wzmapeditor/src/map/: document.rs  history.rs  mod.rs  resize.rs  stats_bridge.rs
crates/wzmapeditor/src/startup/: loading_ui.rs  mod.rs  pipeline.rs  splash_ui.rs  task.rs  workers.rs
crates/wzmapeditor/src/thumbnails/: cache.rs  generator.rs  mod.rs  preload.rs
crates/wzmapeditor/src/tools/: gateway_tool.rs  ground_type_brush.rs  height_brush.rs  label_tool.rs  mirror.rs  mod.rs  object_edit.rs  object_tools.rs  placement.rs  texture_paint.rs  trait_def.rs  vertex_sculpt.rs  wall_tool.rs
crates/wzmapeditor/src/ui/: actions.rs  asset_browser.rs  balance_panel.rs  hierarchy_panel.rs  main_menu.rs  map_browser.rs  minimap.rs  mod.rs  online_maps.rs  property_panel.rs  settings_window.rs  tileset_browser.rs  tool_dispatch.rs  tool_palette.rs  toolbar.rs  validation_panel.rs
crates/wzmapeditor/src/viewport/: atlas.rs  atlas_gpu.rs  camera.rs  ground_types.rs  lightmap.rs  mod.rs  model_gpu.rs  particles.rs  picking.rs  pie_mesh.rs  pipeline_set.rs  (+7 more)
(+80 files in other folders)
