[package]
name = "wz-stats"
description = "Warzone 2100 game stats loader"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
